Overlay bleed in desktop scroll fix

--- a/Root/CSS/Base/Base.css
+++ b/Root/CSS/Base/Base.css
@@ -1,5 +1,8 @@
-html,
-body {
+html {
+	background: rgba(100, 100, 100, 0.75);
+}
+
+html, body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
